--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,9 +100,9 @@ if(
   (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND
   CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 19)
 )
-  set(CMAKE_CXX_STANDARD 20)
+    set(CMAKE_CXX_STANDARD 23)
 else()
-  set(CMAKE_CXX_STANDARD 17)
+    set(CMAKE_CXX_STANDARD 23)
 endif()
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
@@ -177,7 +177,7 @@ if(WIN32)
   if(CMAKE_GENERATOR MATCHES "NMake Makefiles")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
   endif()
-    if (CMAKE_GENERATOR MATCHES "Visual Studio 17 2022")
+    if ((CMAKE_GENERATOR MATCHES "Visual Studio 18 2026") OR (CMAKE_GENERATOR MATCHES "Visual Studio 17 2022"))
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
     endif()
 endif()
